continued working on overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,16 +21,20 @@ body {
 #header {
     font-size: 4.5rem;
     margin: 0 auto;
+    margin-bottom: 1rem;
     padding-top: 1rem;
 }
 
 .header-subtext {
     font-size: 2.5rem;
-    margin: 1rem 0;
+    margin: 1.75rem 0;
+    margin-top: 0;
+    display: inline-block;
 }
 
 .header-button {
-    margin: 1rem 0;
+    margin: 1rem;
+    margin-top: 0;
     padding: 0.2rem 0.7rem;
     font-size: 2.5rem;
     font-weight: bold;
@@ -39,10 +43,17 @@ body {
     border-color: steelblue;
     background-color: #e0eeff;
     cursor: pointer;
+    display: inline-block;
 }
 
-#info-bar-placeholder {
-    background-color: pink;
+#voting-result {
+    font-size: 4rem;
+    margin: 0 auto;
+}
+
+#closing-sentence {
+    font-size: 3rem;
+    font-weight: bold;
 }
 
 #input-master-div {
@@ -101,6 +112,7 @@ body {
     display: flex;
     margin: 1.75rem 0;
     justify-content: left;
+    text-wrap: nowrap;
     position: relative;
     text-align: left;
 }
@@ -122,9 +134,10 @@ body {
 }
 
 .paragraph-container {
+    white-space: normal;
     text-overflow: ellipsis;
     max-width: 100%;
-    overflow-wrap: break-word;
+    word-wrap: break-word;
     justify-content: left;
     text-align: left;
     margin: 0.5rem 0;
@@ -152,6 +165,9 @@ body {
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
+    font-size: 1.5rem;
+    line-height: 200px;
+    text-align: center;
 }
 
 .image-input:hover + .preview-div {
@@ -212,10 +228,6 @@ body {
     margin: 2rem auto;
     padding: 0.5rem;
     border-radius: 2rem;
-}
-
-.voting-div:hover {
-    background-color: deepskyblue;
 }
 
 .image-div {
@@ -279,6 +291,7 @@ body {
 
 #grow-enlarge {
     transform: scale(1.015);
+    background-color: deepskyblue;
 }
 
 .grow-small:hover {
